# StackAndHeap

./: .env.example  .gitignore  README.md  _.py  conversation.json  conversation.py  main.py  pyproject.toml  test.py  tools.py  utils.py
agent/: __init__.py  context.py  dynamic_instruction.py  main_agent.py  model.py  tools.py  utils.py
agent_core/: dynamic_instruction.py  main_agent.py
dev_docs/: cli_design.md
examples/: basic_character_settings.md  basic_character_settings_1.md  basic_character_settings_2.md  basic_character_settings_3.md  note_template.md
stackandheap/: __init__.py
stackandheap/agent_core/: context.py  decorators.py  dynamic_instruction.py  general.py  main_agent.py  tools.py
stackandheap/agent_core/stages/: __init__.py  readme.md  register.py  stage.py  utils.py
stackandheap/agent_core/stages/conversation/: __init__.py  conversation.md
stackandheap/agent_core/stages/regular/: __init__.py
stackandheap/agent_core/stages/summarizing/: __init__.py
stackandheap/agent_core/stages/user_activity_research/: __init__.py  tools.py  user_activity_research.md
stackandheap/agent_core/tools/: __init__.py  built_in.py  decorators.py  register.py
stackandheap/cli/: __init__.py  __main__.py  app.py  logs.py  note.py  run.py  tasks.py  utils.py
