[project]
name = "stackandheap"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ddgs>=9.6.1",
    "openai-agents[litellm]>=0.3.3",
    "rich>=13.7.0",
    "typer[all]>=0.12.3",
]

[[tool.uv.index]]
url = "http://mirrors.aliyun.com/pypi/simple/"
default = true
